--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,107 +6,183 @@
   padding: 0;
 }
 
-#sticky_wrap {
+#app {
+  display: flex;
+
+  &.active {
+    nav.sidebar,
+    section.stickySection{
+      transform : translateX(20rem);
+    }
+  }
+}
+
+nav.sidebar {
   position: fixed;
-  border: 3px solid red;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
+  left: -20rem;
+  width: 20rem;
+  height: 100vh;
+  background-color: #212529;
+  color: #fff;
+  transition: transform .25s ease-in-out;
+
+  .folder-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid #333333;
+    z-index: 999;
+
+    ul {
+      width: 100%;
+      height: calc(100vh - 50px);
+
+      li {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding-left: 5px;
+        list-style: none;
+        height: 40px;
+        border-bottom: 1px solid #333333;
+        background-color: #666666;
+
+        &:last-child {
+          border: none;
+        }
+
+        &:hover {
+          font-weight: 700;
+        }
+      }
+    }
+
+    .folder-control {
+      height: 50px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      margin-top: auto;
+      background-color: cadetblue;
+
+      button {
+        border: none;
+        width: 80px;
+        background-color: transparent;
+        border-bottom: 1px solid;
+        margin-right: 5px;
+        cursor: pointer;
+
+        &:hover {
+          font-weight: 700;
+        }
+      }
+    }
+  }
 }
 
-.sticky {
-  position: absolute;
-  left: 50px;
-  top: 50px;
-  width: 250px;
-  height: 300px;
-  font-size: 1em;
-  background: #FEF098;
-  border: 1px solid #ccc;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
-  margin: 0;
-  padding: 0 0 32px;
-  overflow: hidden;
-  opacity: 0.8;
-}
+section.stickySection {
+  transition: transform .25s ease-in-out;
 
-.sticky:hover {
-  opacity: 1;
-}
+  #menu {
+    cursor: pointer;
+  }
 
-.sticky > .top_nav {
-  height: 32px;
-  line-height: 32px;
-}
-
-.sticky > .top_nav a {
-  display: inline-block;
-  padding: 0 5px;
-  color: #666;
-  text-decoration: none;
-}
-
-.sticky > .top_nav a:hover {
-  color: #FFF4B6;
-  background: #666;
-}
-
-.sticky > .top_nav > a.add {
-  float: left;
-}
-
-.sticky > .top_nav > .right {
-  float: right;
-}
-
-.sticky > textarea {
-  margin: 0;
-  padding: 10px;
-  box-sizing: border-box;
-  width: inherit;
-  height: inherit;
-  background: lightyellow;
-  border: none;
-  resize: none;
-}
-
-/* 사이드바 글목록 */
-.sticky > .side_nav {
-  position: absolute;
-  left: -100%;
-  top: 0;
-  width: 70%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  color: white;
-  box-sizing: border-box;
-  padding-top: 32px;
-  list-style: none;
-  overflow: auto;
-  transition: 0.5s;
-}
-
-.sticky > .side_nav.active {
-  left: 0;
-}
-
-.sticky > .side_nav li {
-  padding: 5px 10px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-.sticky > .side_nav li:hover {
-  background: #333;
-  color: white;
-}
-
-.sticky > .side_nav li i {
-  float: right;
-}
+  #stickyContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 
 
-.localSave {
-  position: absolute;
-  top: 0;
-  left: 0;
+    .sticky {
+      position: absolute;
+      left: 50px;
+      top: 50px;
+      width: 250px;
+      height: 300px;
+      font-size: 1em;
+      background: #FEF098;
+      border: 1px solid #ccc;
+      box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.3);
+      margin: 0;
+      padding: 0 0 32px;
+      overflow: hidden;
+      opacity: 0.8;
+
+      &:hover {
+        opacity: 1;
+      }
+
+      & > .top_nav {
+        height: 32px;
+        line-height: 32px;
+      }
+
+      & > .top_nav a {
+        display: inline-block;
+        padding: 0 5px;
+        color: #666;
+        text-decoration: none;
+      }
+
+      & > .top_nav a:hover {
+        color: #FFF4B6;
+        background: #666;
+      }
+
+      & > .top_nav > a.add {
+        float: left;
+      }
+
+      & > .top_nav > .right {
+        float: right;
+      }
+
+      & > textarea {
+        margin: 0;
+        padding: 10px;
+        box-sizing: border-box;
+        width: inherit;
+        height: inherit;
+        background: lightyellow;
+        border: none;
+        resize: none;
+      }
+
+      /* 사이드바 글목록 */
+      & > .side_nav {
+        position: absolute;
+        left: -100%;
+        top: 0;
+        width: 70%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        color: white;
+        box-sizing: border-box;
+        padding-top: 32px;
+        list-style: none;
+        overflow: auto;
+        transition: 0.5s;
+      }
+
+      & > .side_nav.active {
+        left: 0;
+      }
+
+      & > .side_nav li {
+        padding: 5px 10px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+      }
+
+      & > .side_nav li:hover {
+        background: #333;
+        color: white;
+      }
+
+      & > .side_nav li i {
+        float: right;
+      }
+    }
+  }
 }
